--- a/tex/modules/6-G/activities.tex
+++ b/tex/modules/6-G/activities.tex
@@ -536,9 +536,9 @@ by manipulating columns to reduce each matrix to the identity:
 Consider the row operation \(R_1+4R_3\to R_1\) applied as follows to show
 \(A\sim B\):
 \[
-A=\begin{bmatrix}1&2&3 & 4\\5&6 & 7 & 8\\9 & 10 & 11 & 12\end{bmatrix} 
+A=\begin{bmatrix}1&2&3 & 4\\5&6 & 7 & 8\\9 & 10 & 11 & 12 \\ 13 & 14 & 15 & 16\end{bmatrix} 
   \sim
-\begin{bmatrix}1+4(9)&2+4(10)&3+4(11) & 4+4(12) \\5&6 & 6 & 8\\9 & 10 & 11 & 12\end{bmatrix}=B
+\begin{bmatrix}1+4(9)&2+4(10)&3+4(11) & 4+4(12) \\5&6 & 6 & 8\\9 & 10 & 11 & 12 \\ 13 & 14 & 15 & 16\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\), by applying the same row operation to 
@@ -553,9 +553,9 @@ A=\begin{bmatrix}1&2&3 & 4\\5&6 & 7 & 8\\9 & 10 & 11 & 12\end{bmatrix}
 Consider the row operation \(R_1\leftrightarrow R_3\) applied as follows to show
 \(A\sim B\):
 \[
-A=\begin{bmatrix}1&2&3&4\\5&6&7&8\\9&10&11&12\end{bmatrix}
+A=\begin{bmatrix}1&2&3&4\\5&6&7&8\\9&10&11&12 \\ 13 & 14 & 15 & 16\end{bmatrix}
   \sim
-\begin{bmatrix}9&10&11&12\\5&6&7&8\\1&2&3&4\end{bmatrix}=B
+\begin{bmatrix}9&10&11&12\\5&6&7&8\\1&2&3&4 \\ 13 & 14 & 15 & 16\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\), by applying the same row operation to \(I\).
@@ -567,9 +567,9 @@ A=\begin{bmatrix}1&2&3&4\\5&6&7&8\\9&10&11&12\end{bmatrix}
 Consider the row operation \(3R_2\to R_2\) applied as follows to show
 \(A\sim B\):
 \[
-A=\begin{bmatrix}1&2&3&4\\5&6&7&8\\9&10&11&12\end{bmatrix}
+A=\begin{bmatrix}1&2&3&4\\5&6&7&8\\9&10&11&12 \\ 13 & 14 & 15 & 16\end{bmatrix}
   \sim
-\begin{bmatrix}1&2&3&4\\3(5)&3(6)&3(7)&3(8)\\9&10&11&12\end{bmatrix}=B
+\begin{bmatrix}1&2&3&4\\3(5)&3(6)&3(7)&3(8)\\9&10&11&12 \\ 13 & 14 & 15 & 16\end{bmatrix}=B
 \]
 \begin{enumerate}[(a)]
 \item Find a matrix \(R\) such that \(B=RA\).
