--- a/tex/modules/1-E/activities.tex
+++ b/tex/modules/1-E/activities.tex
@@ -89,6 +89,20 @@ Its \term{solution set} is given by
   \end{multicols}
 \end{remark}
 
+\begin{remark}
+It will often be convenient to think of a system of equations as a vector equation.
+\vfill
+By applying vector operations and equating components, it is straightforward to see that the vector equation
+\[ x_1 \begin{bmatrix} 1 \\ 3 \\ 0 \end{bmatrix}+ x_2 \begin{bmatrix} 0 \\ -2 \\ -1 \end{bmatrix} + x_3 \begin{bmatrix} 3 \\ 4 \\1 \end{bmatrix} = \begin{bmatrix} 3 \\ 0 \\ -2 \end{bmatrix}\]
+is equivalent to the system of equations
+\begin{alignat*}{4}
+   x_1 &     &      &\,+\,& 3x_3 &\,=\,& 3 \\
+  3x_1 &\,-\,& 2x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
+       &\,-\,&  x_2 &\,+\,&  x_3 &\,=\,& -2
+\end{alignat*}
+\end{remark}
+
+
 \begin{definition}
   A linear system is \term{consistent} if its solution set
   is non-empty (that is, there exists a solution for the
@@ -250,13 +264,17 @@ Its \term{solution set} is given by
   The corresponding augmented matrix for this system is obtained by
   simply writing the coefficients and constants in matrix form.
 
-  \begin{multicols}{2}
+  \begin{multicols}{3}
     Linear system:
     \begin{alignat*}{2}
        x_1 + 3x_3 &\,=\,& 3 \\
       3x_1 - 2x_2 + 4x_3 &\,=\,& 0 \\
       -x_2 +  x_3 &\,=\,& -2
     \end{alignat*}
+
+    \columnbreak
+    Vector equation:
+\[ x_1 \begin{bmatrix} 1 \\ 3 \\ 0 \end{bmatrix}+ x_2 \begin{bmatrix} 0 \\ -2 \\ -1 \end{bmatrix} + x_3 \begin{bmatrix} 3 \\ 4 \\1 \end{bmatrix} = \begin{bmatrix} 3 \\ 0 \\ -2 \end{bmatrix}\]
 
     \columnbreak
 
@@ -630,15 +648,8 @@ to the original system. Then find its solution set.
 \end{activity}
 
 \begin{activity}{10}
-Consider the system of equations.
- \[
-		\begin{alignedat}{4}
-   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
-   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-   		  -x_1 &\,\,&  &\,-\,&  3x_3 &\,=\,&1
-   		\end{alignedat}
-\]
-
+Consider the vector equation
+ \[ x_1 \begin{bmatrix} 3 \\ 2\\ -1 \end{bmatrix}+x_2 \begin{bmatrix}-2 \\ -2 \\ 0 \end{bmatrix}+x_3\begin{bmatrix} 13 \\ 10 \\ -3 \end{bmatrix}=\begin{bmatrix} 6 \\ 2 \\ 1 \end{bmatrix}\]
 \begin{subactivity}
 Convert this to an augmented matrix and use technology to compute its
 reduced row echelon form:
