Eradicate \vect, addresses #125

--- a/tex/modules/4-A/activities.tex
+++ b/tex/modules/4-A/activities.tex
@@ -26,7 +26,7 @@ Given a linear transformation \(T:V\to W\),
     \draw (0,0) -- (0,3);
     \draw (0,0) -- (-2,-1);
     \draw[thick,-latex,blue] (0,0) -- (2,1)
-          node[anchor=south west] {\(\vect v\)};
+          node[anchor=south west] {\(\vec v\)};
     \node[anchor=west] at (-1,-1) {domain \(\IR^3\)};
   \end{scope}
   \draw[dashed,-latex] (3,3) to [bend left=30] (7,3);
@@ -35,7 +35,7 @@ Given a linear transformation \(T:V\to W\),
     \draw (-2,0) -- (2,0);
     \draw (0,-2) -- (0,2);
     \draw[thick,-latex,red] (0,0) -- (-1.5,1)
-          node[anchor=south east] {\(T(\vect v)\)};
+          node[anchor=south east] {\(T(\vec v)\)};
     \node[anchor=west] at (0,-1) {co-domain \(\IR^2\)};
   \end{scope}
 \end{tikzpicture}
@@ -1405,7 +1405,7 @@ standard matrix \(A\). Label each of the following as true or false.
 \item \(\RREF(A)\) is the identity matrix.
 \item The columns of \(A\) form a basis for \(\IR^n\)
 \item The system of linear equations given by the augmented matrix \(\begin{bmatrix}[c|c] A & \vec{b} \end{bmatrix}\) has exactly one solution
-for each \(\vect b \in \IR^n\).
+for each \(\vec b \in \IR^n\).
 \end{enumerate}
 \end{activity}
 
