--- a/tex/modules/6-G/activities.tex
+++ b/tex/modules/6-G/activities.tex
@@ -183,7 +183,7 @@ area of the transformed unit square shown here?
 \begin{activity}{2}
 The transformation of the unit square by the
 standard matrix \([\vec{v}\hspace{0.5em} \vec{v}]\) is illustrated below: both
-\(T(\vec{e}_1)=T(\vect{e}_2)=\vec{v}\).
+\(T(\vec{e}_1)=T(\vec{e}_2)=\vec{v}\).
 What is \(\det([\vec{v}\hspace{0.5em} \vec{v}])\), 
 the area of the transformed unit square shown here?
 \begin{center}
