--- a/tex/tbil-la.sty
+++ b/tex/tbil-la.sty
@@ -4,7 +4,6 @@
 \usepackage{accents}
 
 \renewcommand{\vec}[1]{\mathbf{\accentset{\rightharpoonup}{#1}}}
-\newcommand{\vect}{\vec} %SC used \vect while DL used \vec
 
 \newcommand{\circledNumber}[1]{ % https://tex.stackexchange.com/a/7045
 \tikz[baseline=(char.base)]{
@@ -81,19 +80,19 @@
 \newcommand{\vectorSpaceProperties}{
 \begin{multicols}{2}
 \begin{itemize}
-  \item \textbf{Addition is associative:} \(\vect u\oplus(\vect v\oplus\vect w)=
-        (\vect u\oplus\vect v)\oplus\vect w\).
-  \item \textbf{Addition is commutative:} \(\vect u\oplus\vect v=
-        \vect v\oplus\vect u\).
-  \item \textbf{Additive identity exists:} There exists some \(\vect z\)
-        where \(\vect v\oplus\vect z=\vect v\).
-  \item \textbf{Additive inverses exist:} There exists some \(-\vect v\)
-        where \(\vect v\oplus(-\vect v)=\vect z\).
+  \item \textbf{Addition is associative:} \(\vec u\oplus(\vec v\oplus\vec w)=
+        (\vec u\oplus\vec v)\oplus\vec w\).
+  \item \textbf{Addition is commutative:} \(\vec u\oplus\vec v=
+        \vec v\oplus\vec u\).
+  \item \textbf{Additive identity exists:} There exists some \(\vec z\)
+        where \(\vec v\oplus\vec z=\vec v\).
+  \item \textbf{Additive inverses exist:} There exists some \(-\vec v\)
+        where \(\vec v\oplus(-\vec v)=\vec z\).
   \columnbreak
-  \item \textbf{Scalar multiplication is associative:} \(a\odot(b\odot\vect v)=(ab)\odot\vect v\).
-  \item \textbf{Scalar multiplication identity exists:} \(1\odot\vect v=\vect v\).
-  \item \textbf{Scalar mult. distributes over vector addition:} \(a\odot(\vect u\oplus\vect v)=a\odot\vect u\oplus a\odot\vect v\).
-  \item \textbf{Scalar mult. distributes over scalar addition:} \((a+ b)\odot\vect v=a\odot\vect v\oplus b\odot\vect v\).
+  \item \textbf{Scalar multiplication is associative:} \(a\odot(b\odot\vec v)=(ab)\odot\vec v\).
+  \item \textbf{Scalar multiplication identity exists:} \(1\odot\vec v=\vec v\).
+  \item \textbf{Scalar mult. distributes over vector addition:} \(a\odot(\vec u\oplus\vec v)=a\odot\vec u\oplus a\odot\vec v\).
+  \item \textbf{Scalar mult. distributes over scalar addition:} \((a+ b)\odot\vec v=a\odot\vec v\oplus b\odot\vec v\).
 \end{itemize}
 \end{multicols}
 }
