--- a/tex/modules/7-P/sections/2.tex
+++ b/tex/modules/7-P/sections/2.tex
@@ -146,7 +146,7 @@ By writing this linear system in terms of matrix multiplication, we obtain the
     \frac{1}{2} & 0 & 0
   \end{bmatrix}
 \) and page rank vector
-\(\vect{x}=\begin{bmatrix} x_1 \\ x_2 \\ x_3 \end{bmatrix}\).
+\(\vec{x}=\begin{bmatrix} x_1 \\ x_2 \\ x_3 \end{bmatrix}\).
 
 Thus, computing the importance of pages on a network is equivalent to solving
 the matrix equation \(A\vec{x}=1\vec{x}\).
