Fix enumerate item labels that somehow got broken (Ooops...)

--- a/tex/course-slides.sty
+++ b/tex/course-slides.sty
@@ -5,6 +5,8 @@
 \usecolortheme{rose}
 %Center frame titles
 \setbeamertemplate{frametitle}[default][center]
+\setbeamertemplate{enumerate items}[default]
+
 
 \title{Linear Algebra}
 \author{Clontz \& Lewis}
