--- a/tex/modules/2-V/index.tex
+++ b/tex/modules/2-V/index.tex
@@ -7,29 +7,106 @@
 
 \CatchFileDef{\activities}{modules/2-V/activities.tex}
 
-\setcounter{SectionCounter}{-1}
 \newModuleSection
-\includeActivities{1}{5}{\activities}
+\begin{goals}
+Today we will explore what properties are shared by \(\IR^1\) and \(\IR^2\) with an eye towards generalizing to higher dimensions.
+\end{goals}
+\includeActivities{1}{7}{\activities}
+\begin{summary}
+Today we came up with a set of properties shared by all \(\IR^n\) and used these to define \term{vector spaces} (Standard V1). Next class, we wll practice determining  when other sets are or are not vector spaces.
+\end{summary}
 
 \newModuleSection
-\includeActivities{6}{16}{\activities}
+\begin{goals}
+Today we will practice showing when a set with given operations is or is not a vector space (Standard V1).
+\end{goals}
+\includeActivities{8}{12}{\activities}
+\begin{summary}
+Today we practiced showing when a set with given operations is or is not a vector space (Standard V1).
+\end{summary}
 
 \newModuleSection
-\includeActivities{17}{24}{\activities}
+\begin{goals}
+Today we will begin exploring the notions of \term{linear combinations} and \term{span}.
+\end{goals}
+\includeActivities{13}{17}{\activities}
+\begin{summary}
+Today we begin exploring \term{linear combinations} and \term{span}.
+\vfill
+Next class, we will learn how to check if a vector is a linear combination of a set of vectors or not (Standard V2).
+\end{summary}
 
 \newModuleSection
-\includeActivities{25}{34}{\activities}
+\begin{goals}
+Today we will learn how to check if a vector is a linear combination of a set of vectors or not (Standard V2).
+\end{goals}
+\includeActivities{18}{26}{\activities}
+\begin{summary}
+Today we learned how to check if a vector is a linear combination of a set of vectors or not (Standard V2).
+\end{summary}
 
 \newModuleSection
-\includeActivities{35}{42}{\activities}
+\begin{goals}
+Today we will learn how to determine when a set of vectors spans the entire vector space (Standard V3).
+\end{goals}
+\includeActivities{27}{36}{\activities}
+\begin{summary}
+Today we learned how to determine when a set of vectors spans the entire vector space (Standard V3).
+\end{summary}
 
 \newModuleSection
-\includeActivities{43}{54}{\activities}
+\begin{goals}
+Today we will learn about \term{subspaces} (Standard V4)
+\end{goals}
+\includeActivities{37}{44}{\activities}
+\begin{summary}
+Today we learned how to determine if a set of vectors forms a  {subspace} of \(\IR^n\) (Standard V4).
+\end{summary}
 
 \newModuleSection
-\includeActivities{55}{65}{\activities}
+\begin{goals}
+Today we will learn about an important concept called \term{linear independence} (Standard V5).
+\end{goals}
+\includeActivities{45}{53}{\activities}
+\begin{summary}
+Today we learned how to determine if a set of vectors is \term{linearly independent} or \term{linearly dependent} (Standard V5).
+\end{summary}
 
 \newModuleSection
-\includeActivities{66}{80}{\activities}
+\begin{goals}
+Today we will learn about a \term{basis} of a vector space (Standard V6).
+\end{goals}
+\includeActivities{54}{59}{\activities}
+\begin{summary}
+Today we learned how to determine if a set of vectors form a \term{basis} of a vector space (Standard V6).
+\end{summary}
+
+\newModuleSection
+\begin{goals}
+Today we will learn how to find a basis of a subspace of \(\IR^n\).
+\end{goals}
+\includeActivities{62}{67}{\activities}
+\begin{summary}
+Today we learned how to find a basis of a subspace of \(\IR^n\).
+\end{summary}
+
+\newModuleSection
+\begin{goals}
+Today we will learn how to find the dimension of a subspace of \(\IR^n\).
+\end{goals}
+\includeActivities{68}{82}{\activities}
+\begin{summary}
+Today we learned how to find the dimension of a subspace of \(\IR^n\). We also started learning how to find a basis of the solution space of a \term{homogeneous} system of equations (Standard V9).
+\end{summary}
+
+\newModuleSection
+\begin{goals}
+Today we will practice finding a basis of the solution space of a \term{homogeneous} system of equations (Standard V9).  This will come up again later when we find the \term{kernel} of a \term{linear transformation}.
+\end{goals}
+\includeActivities{83}{86}{\activities}
+\begin{summary}
+Today we learned how to find a basis of the solution space of a \term{homogeneous} system of equations (Standard V9).
+\end{summary}
+
 
 \end{module}
