--- a/tex/modules/4-A/index.tex
+++ b/tex/modules/4-A/index.tex
@@ -7,16 +7,58 @@
 \CatchFileDef{\activities}{modules/4-A/activities.tex}
 
 \newModuleSection
+\begin{goals}
+Today we will learn about \term{linear transformations} (Standard A1).
+\end{goals}
 \includeActivities{1}{11}{\activities}
+\begin{summary}
+Today we learned how to determine if a map between Eucliden spaces is a  \term{linear transformation} or not (Standard A1).
+\end{summary}
 
 \newModuleSection
-\includeActivities{12}{24}{\activities}
+\begin{goals}
+Today we will learn how to use matrices to summarize linear maps (Standard A2).
+\end{goals}
+\includeActivities{12}{22}{\activities}
+\begin{summary}
+Today we learned how to use matrices to summarize linear maps (Standard A2).
+\end{summary}
 
 \newModuleSection
-\includeActivities{25}{42}{\activities}
+\begin{goals}
+Today we will learn about an important subspace called the \term{kernel} of a linear transformation (Standard A3).
+\end{goals}
+\includeActivities{23}{28}{\activities}
+\begin{summary}
+Today we learned about the \term{kernel} of a linear transformation (Standard A3).
+\end{summary}
 
 \newModuleSection
-\includeActivities{43}{59}{\activities}
+\begin{goals}
+Today we will learn about an important subspace called the \term{image} of a linear transformation (Standard A3).
+\end{goals}
+\includeActivities{29}{35}{\activities}
+\begin{summary}
+Today we learned about the \term{image} of a linear transformation (Standard A3).
+\end{summary}
+
+\newModuleSection
+\begin{goals}
+Today we will learn about \term{injective} and \term{surjective} linear maps (Standard A4).
+\end{goals}
+\includeActivities{36}{51}{\activities}
+\begin{summary}
+Today we learned about \term{injective} and \term{surjective} linear maps (Standard A4).
+\end{summary}
+
+\newModuleSection
+\begin{goals}
+Today we will learn about \term{bijective} linear maps. This will be needed when we learn about \term{invertible matrices} (Standard M2).
+\end{goals}
+\includeActivities{52}{64}{\activities}
+\begin{summary}
+Today we learned about \term{bijective} linear maps. This will be important when we learn about \term{invertible matrices} (Standard M2) in the next module.
+\end{summary}
 
 
 \end{module}
