--- a/tex/modules/5-M/activities.tex
+++ b/tex/modules/5-M/activities.tex
@@ -454,9 +454,9 @@ by row reducing the matrix \([A\,|\,I]\) at once.
 Is the matrix \(\begin{bmatrix} 2 & 3 & 1 \\ -1 & -4 & 2 \\ 0 & -5 & 5 \end{bmatrix}\) invertible? Give a reason for your answer.
 \end{activity}
 
-\begin{observation}
+\begin{quickcheck}
     An \(n\times n\) matrix \(A\) is invertible if and only if \(\RREF(A) = I_n\).
-\end{observation}
+\end{quickcheck}
 
 \begin{activity}{10}
   Let \(T:\IR^2\to\IR^2\) be the bijective linear map defined by
