--- a/tex/modules/6-G/index.tex
+++ b/tex/modules/6-G/index.tex
@@ -9,13 +9,51 @@
 \CatchFileDef{\activities}{modules/6-G/activities.tex}
 
 \newModuleSection
-\includeActivities{1}{16}{\activities}
+\begin{goals}
+Today we will beign learning how linear transformations affect areas.
+\end{goals}
+\includeActivities{1}{14}{\activities}
+\begin{summary}
+Today we defined the \term{determinant}, which measures how linear transformations scale areas.
+\end{summary}
 
 \newModuleSection
-\includeActivities{17}{38}{\activities}
+\begin{goals}
+Today we will learn how row operations affect determinants (Standard G1) and how to compute determinants (Standard G2).
+\end{goals}
+\includeActivities{15}{33}{\activities}
+\begin{summary}
+Today we learned how row operations affect determinants (Standard G1) and how to compute determinants (Standard G2).
+\end{summary}
 
 \newModuleSection
-\includeActivities{39}{51}{\activities}
+\begin{goals}
+Today we will continue practicing computing determinants (Standard G2).
+\end{goals}
+\includeActivities{34}{40}{\activities}
+\begin{summary}
+Today we continued practicing computing determinants (Standard G2).
+\end{summary}
+
+\newModuleSection
+\begin{goals}
+Today we will learn how to compute \term{eigenvalues} and \term{eigenvectors} (standards G3 and G4).
+\end{goals}
+\includeActivities{41}{49}{\activities}
+\begin{summary}
+Today we learned how to compute \term{eigenvalues} and \term{eigenvectors} (standards G3 and G4).
+\vfill
+Next class we will practice computing eigenvectors more.
+\end{summary}
+
+\newModuleSection
+\begin{goals}
+Today we will practice computing eigenvectors more.
+\end{goals}
+\includeActivities{50}{54}{\activities}
+\begin{summary}
+Today we practiced computing eigenvectors more.
+\end{summary}
 
 
 \end{module}
