--- a/tex/course-slides-sectioned.tex
+++ b/tex/course-slides-sectioned.tex
@@ -8,13 +8,13 @@
 \titlepage
 \end{frame}
 
-\input{modules/0-I/index.tex}
+%\input{modules/0-I/index.tex}
 \input{modules/1-E/index.tex}
 \input{modules/2-V/index.tex}
 \input{modules/4-A/index.tex}
 \input{modules/5-M/index.tex}
 \input{modules/6-G/index.tex}
-\input{modules/7-P/index.tex}
+%\input{modules/7-P/index.tex}
 
 
 
