--- a/tex/modules/2-V/activities.tex
+++ b/tex/modules/2-V/activities.tex
@@ -77,15 +77,6 @@ The space of \(m \times n\)\term{matrices}
 \end{observation}
 
 
-\begin{remark}
-  Previously, we defined a \textbf{vector space} \(V\) to be any collection of
-  mathematical objects with
-  associated addition and scalar multiplication operations that satisfy
-  the following eight properties for all \(\vec u,\vec v,\vec w\) in \(V\),
-  and all scalars (i.e. real numbers) \(a,b\).
-
-  \vectorSpaceProperties
-\end{remark}
 
 \begin{remark}
   Every Euclidean space \(\IR^n\) is a vector space, but there are other
@@ -125,6 +116,16 @@ The space of \(m \times n\)\term{matrices}
     \item \(\P\): Polynomials of any degree.
     \item \(C(\IR)\): Real-valued continuous functions.
   \end{itemize}
+\end{remark}
+
+\begin{remark}
+  Previously, we defined a \term{vector space} \(V\) to be any collection of
+  mathematical objects with
+  associated addition and scalar multiplication operations that satisfy
+  the following eight properties for all \(\vec u,\vec v,\vec w\) in \(V\),
+  and all scalars (i.e. real numbers) \(a,b\).
+
+  \vectorSpaceProperties
 \end{remark}
 
 \begin{activity}{20}
@@ -325,8 +326,6 @@ The space of \(m \times n\)\term{matrices}
     in the \(xy\) plane.
 \end{activity}
 
-
-
 \begin{remark}
 	Recall these definitions from last class:
 \begin{itemize}
@@ -412,6 +411,10 @@ The following are all equivalent statements:
   \begin{bmatrix}-1\\-3\\2 \\ 2\end{bmatrix}\right\}\)
   by solving an appropriate vector equation.
 \end{activity}
+
+
+
+
 
 \begin{activity}{5}
   Determine if
@@ -654,8 +657,8 @@ Let \(\vec{v}_1, \vec{v}_2, \vec{v}_3 \in \IR^7\) be three vectors, and suppose 
   So we need to check two things:
 
   \begin{itemize}
-  \item The set is \textbf{closed under addition}: for any \(\vec{x},\vec{y} \in S\), the sum \(\vec{x}+\vec{y}\) is also in \(S\).
-  \item The set is \textbf{closed under scalar multiplication}: for any \(\vec{x} \in S\) and scalar \(c \in \IR\), the product \(c\vec{x}\) is also in \(S\).
+  \item The set is \term{closed under addition}: for any \(\vec{x},\vec{y} \in S\), the sum \(\vec{x}+\vec{y}\) is also in \(S\).
+  \item The set is \term{closed under scalar multiplication}: for any \(\vec{x} \in S\) and scalar \(c \in \IR\), the product \(c\vec{x}\) is also in \(S\).
 \end{itemize}
 \end{fact}
 
@@ -1057,7 +1060,7 @@ vectors that can form a linearly independent set?
   \]
 \end{activity}
 
-\begin{fact}
+\begin{quickcheck}
   The set \(\{\vec v_1,\dots,\vec v_m\}\) is a basis for \(\IR^n\) if and
   only if \(m=n\) and
   \(\RREF[\vec v_1\,\dots\,\vec v_n]=
@@ -1073,10 +1076,10 @@ vectors that can form a linearly independent set?
   its square matrix must row-reduce to the so-called \term{identity matrix}
   containing all zeros except for a downward diagonal of ones.
   (We will learn where the identity matrix gets its name in a later module.)
-\end{fact}
+\end{quickcheck}
 
 \begin{observation}
-Recall that a \textbf{subspace} of a vector space is a subset that is itself a vector space.
+Recall that a \term{subspace} of a vector space is a subset that is itself a vector space.
 
 \vspace{1em}
 
@@ -1181,6 +1184,17 @@ Let \(W\) be the subspace of \(\IR^4\) given by
 \begin{activity}{10}
 Let \(W\) be the subspace of \(\P^3\) given by
  \[W = \vspan \left\{x^3+3x^2+x-1, 2x^3-x^2+x+2, 4x^3+5x^2+3x, 3x^3+2x^2+2x+1 \right\} \]
+ Find a basis for \(W\).
+\end{activity}
+
+\begin{activity}{10}
+Let \(W\) be the subspace of \(M_{2,2}\) given by
+ \[W = \vspan \left\{
+ \begin{bmatrix} 1 & 3 \\ 1  & -1 \end{bmatrix},
+ \begin{bmatrix} 2 & -1 \\ 1  & 2 \end{bmatrix},
+ \begin{bmatrix} 4 & 5 \\ 3  & 0 \end{bmatrix},
+ \begin{bmatrix} 3 & 2 \\ 2  & 1 \end{bmatrix}
+ \right\}. \]
  Find a basis for \(W\).
 \end{activity}
 
@@ -1438,7 +1452,7 @@ What can you conclude about \(W\)?
 \end{observation}
 
 \begin{definition}
-A \textbf{homogeneous} system of linear equations is one of the form:
+A \term{homogeneous} system of linear equations is one of the form:
   \begin{alignat*}{5}
     a_{11}x_1 &\,+\,& a_{12}x_2 &\,+\,& \dots  &\,+\,& a_{1n}x_n &\,=\,& 0 \\
     a_{21}x_1 &\,+\,& a_{22}x_2 &\,+\,& \dots  &\,+\,& a_{2n}x_n &\,=\,& 0 \\
@@ -1525,6 +1539,19 @@ Rewrite this solution space in the form \[\vspan\left\{\begin{bmatrix} \unknown 
   is a basis for the solution space.
 \end{fact}
 
+
+
+\begin{activity}{10}
+Consider the homogeneous system of equations
+\begin{alignat*}{5}
+2x_1&\,+\,&4x_2&\,+\,& 2x_3&\,-\,&4x_4  &=& 0 \\
+-2x_1&\,-\,&4x_2&\,+\,&x_3 &\,+\,& x_4 &=& 0 \\
+3x_1&\,+\,&6x_2&\,-\,&x_3 &\,-\,&4 x_4 &=& 0 \\
+\end{alignat*}
+
+Find a basis for its solution space.
+\end{activity}
+
 \begin{activity}{10}
 Consider the homogeneous vector equation
 \[ 
@@ -1534,22 +1561,7 @@ Consider the homogeneous vector equation
    x_4 \begin{bmatrix} -4 \\ 1 \\ -4 \end{bmatrix}=
        \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}
 \]
-\begin{alignat*}{5}
-x_1&\,-\,&3x_2&\,+\,& 2x_3&\,\,&  &=& 0 \\
-2x_1&\,-\,&6x_2&\,+\,&4x_3 &\,+\,&3 x_4 &=& 0 \\
--2x_1&\,+\,&6x_2&\,-\,&4x_3 &\,-\,&4 x_4 &=& 0 \\
-\end{alignat*}
 
-Find a basis for its solution space.
-\end{activity}
-
-\begin{activity}{10}
-Consider the homogeneous system of equations
-\begin{alignat*}{5}
-2x_1&\,+\,&4x_2&\,+\,& 2x_3&\,-\,&4x_4  &=& 0 \\
--2x_1&\,-\,&4x_2&\,+\,&x_3 &\,+\,& x_4 &=& 0 \\
-3x_1&\,+\,&6x_2&\,-\,&x_3 &\,-\,&4 x_4 &=& 0 \\
-\end{alignat*}
 
 Find a basis for its solution space.
 \end{activity}
