--- a/tex/modules/5-M/index.tex
+++ b/tex/modules/5-M/index.tex
@@ -9,13 +9,40 @@
 \CatchFileDef{\activities}{modules/5-M/activities.tex}
 
 \newModuleSection
+\begin{goals}
+Today we will learn about composing linear maps.
+\end{goals}
 \includeActivities{1}{7}{\activities}
+\begin{summary}
+Today we learned that matrix multiplication is simply composing linear maps (Standard M1)
+\end{summary}
 
 \newModuleSection
-\includeActivities{8}{15}{\activities}
+\begin{goals}
+Today we will learn how row operations can be interpreted via matrix multiplication (Standard M2). This will be useful when we compute \term{determinants} in module G.
+\end{goals}
+\includeActivities{8}{14}{\activities}
+\begin{summary}
+Today we learned how row operations can be interpreted via matrix multiplication (Standard M2). This will be useful when we compute \term{determinants} in module G.
+\end{summary}
 
 \newModuleSection
-\includeActivities{16}{24}{\activities}
+\begin{goals}
+Today we will learn how to determine when a matrix is \term{invertible}(Standard M3).
+\end{goals}
+\includeActivities{15}{18}{\activities}
+\begin{summary}
+Today we learned how to determine when a matrix is \term{invertible} (Standard M3).
+\end{summary}
+
+\newModuleSection
+\begin{goals}
+Today we will learn how to find the \term{inverse} of an invertible matrix (Standard M4).
+\end{goals}
+\includeActivities{19}{24}{\activities}
+\begin{summary}
+Today we learned how to find the \term{inverse} of an invertible matrix (Standard M4).
+\end{summary}
 
 
 \end{module}
