Generate separate activities.pdf

--- a/tex/modules/1-E/activities.tex
+++ b/tex/modules/1-E/activities.tex
@@ -237,6 +237,7 @@ is equivalent to the system of equations
        0 &\, \,& -1 &\,\,& 1 &\,|\,& -2
     \end{alignat*}
   \end{multicols}
+
 \end{remark}
 
 \begin{definition}
@@ -264,7 +265,7 @@ is equivalent to the system of equations
   The corresponding augmented matrix for this system is obtained by
   simply writing the coefficients and constants in matrix form.
 
-  \begin{multicols}{3}
+  \begin{multicols}{2}
     Linear system:
     \begin{alignat*}{2}
        x_1 + 3x_3 &\,=\,& 3 \\
@@ -272,7 +273,7 @@ is equivalent to the system of equations
       -x_2 +  x_3 &\,=\,& -2
     \end{alignat*}
 
-    \columnbreak
+    %\columnbreak
     Vector equation:
 \[ x_1 \begin{bmatrix} 1 \\ 3 \\ 0 \end{bmatrix}+ x_2 \begin{bmatrix} 0 \\ -2 \\ -1 \end{bmatrix} + x_3 \begin{bmatrix} 3 \\ 4 \\1 \end{bmatrix} = \begin{bmatrix} 3 \\ 0 \\ -2 \end{bmatrix}\]
 
