--- a/tex/facilitator-notes.tex
+++ b/tex/facilitator-notes.tex
@@ -10,7 +10,7 @@
 
 \subsection*{Introduction}
 
-These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Each team should be provided with a vertical, ideally non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 10-35 students, with each ``section'' designed to fill one 50-60 minute class period.  The notes (formatted as slides) are also distributed to the students for use during class and for review purposes; thus, there are ``facts'', ``definitions'', and ``observations'' sprinkled in for reference use, but the bulk of class time is spent on the application activities.  Each application activity has an estimated time listed with it; these add up to 50-60 minutes per day.
+These notes are for a one semester, 3-hour sophomore-level Linear Algebra course.  Teams should have at minimum 5 people to ensure a sufficiently sized team factoring in absences.  Ideally, each team should be provided with a vertical,non-permanent surface for their work, such as a whiteboard or chalkboard.  A vertical surface encourages collaboration and discussion, and discourages individual work on paper.  These notes have been field-tested at a large regional public university in classes with 10-35 students, with each ``section'' designed to fill one 50-60 minute class period.  The notes (formatted as slides) are also distributed to the students for use during class and for review purposes; thus, there are ``facts'', ``definitions'', and ``observations'' sprinkled in for reference use, but the bulk of class time is spent on the application activities.  Each application activity has an estimated time listed with it; these add up to 50-60 minutes per day.
 
 The course consists of 5 modules, listed below, as well as a few extra days of applied activities (called Module P). The activities are split into sections optimized for 27 75-minute class days with 60 minutes each day devoted to application activity, and the remaining 15 minutes for assessment.  
 
@@ -24,170 +24,49 @@ The course consists of 5 modules, listed below, as well as a few extra days of a
 \end{enumerate}
 
 \subsection*{Module E: Systems of Linear Equations}
-This module explores how to solve arbitrarily large systems of linear equations.  We emphasize how to write the solution set using set-builder notation, and introduce the students to using Octave (a free language quasi-equivalent to Matlab) to perform computation.  The choice of Octave here is somewhat arbitrary but motivated by request of our engineering faculty, who use Matlab; instructors are encouraged to adapt the materials to use the technology best suited to their instructional context.  
-
-RAT answers (IF-AT card B002, 1-10):
-\begin{multicols}{10}
-\begin{enumerate}[1)]
-\item A
-\item B
-\item D
-\item C
-\item B
-\item B
-\item C
-\item B
-\item D
-\item D
-\end{enumerate}
-\end{multicols}
-
-\subsubsection*{Section 0}
-This is a half day, as the first RAT typically only takes a half hour, leaving a half of a class period.  After introducing some notation, we begin by exploring systems of two equations in two variables, which students learn how to solve (using e.g. back-substitution) in high school algebra.  We quickly move on to infinite solution sets with activity E.8 and begin introducing students to set-builder notation.
-
-
-\subsubsection*{Section 1}
-We begin this section by quickly introducing augmented matrix notation.  We then begin building fluency in this new language through activity E.15; here, the instructor is advised to encourage students to think about what the matrix operation means for the corresponding system of equations.  We list 10 minutes for team's working on this activity, but we often spend another 5 minutes in intra-team discussion as well.  E.17 and E.18 introduce the students to the Gauss-Jordan algorithm; rather than belabor this in class, we provide extra videos and emphasize to students that this particular skill is to be learned and practiced in the individual space.  This allows us to go ahead and begin using technology in the next part.
-
-\subsubsection*{Section 2}
-This section begins getting students familiar with an online computational environment emulating Matlab (we note that other instructional contexts may call for different choices in technology).  After getting the technology running and using it to solve a couple systems with no or one solution, we then explore the difference between free and bound variables in Activity E.26.
-
-
+This module explores how to solve arbitrarily large systems of linear equations.  
+After introducing some notation, we begin by exploring systems of two equations in two variables, which students learn how to solve (using e.g. back-substitution) in high school algebra.  We quickly move on to infinite solution sets with activity E.9 and begin practicing set-builder notation.  We then begin building fluency in the new language of augmented matrices through activity E.16; here, the instructor is advised to encourage students to think about what the matrix operation means for the corresponding system of equations.  We then motivate the definition of reduced row echelon form as the end goal of the row reduction process. Subsequently, students are introduced to the Gauss-Joradan algorithm of row reduction. Activity E.30 begins getting students familiar with an online computational environment emulating Matlab (we note that other instructional contexts may call for different choices in technology). The module concludes with a series of activities in which students practice solving systems of linear equations. Be sure to encourage students to use technology on these (and all subsequent) activities for matrix reduction. 
+ 
 \subsection*{Module V: Introduction to vector spaces}
-This module introduces students to abstract vector spaces.  After a motivating activity in section 0, we define vector spaces in part 1, characterizing them as ``things that act like Euclidean spaces''.  The notion of linear combinations and span are introduced and explored through parts 2 and 3, frequently working with vector spaces such as polynomials and matrices after initial examples about Euclidean spaces.  Section 4 introduces the important notion of a subspace.  Part 5 introduces linear independence, and Part 6 introduces the definition of a basis.  The final section ties a lot of these ideas together and explores how to efficiently describe a subspace by computing a basis.
 
-RAT answers (IF-AT card B002, 11-20):
-\begin{multicols}{10}
-\begin{enumerate}[1)]
-\setcounter{enumi}{10}
-\item C
-\item A
-\item A
-\item B
-\item C
-\item C
-\item D
-\item D
-\item D
-\item B
-\end{enumerate}
-\end{multicols}
+This module introduces students to abstract vector spaces and fundamental concepts such as linear independence, spanning sets, and bases.  Activity V.2 motivates the (often seemingly arbitrary, at least to students) definition of a vector space as something that acts like Euclidean space.  After several activities practicing this, we introduce the notions of linear combinations and span. As in Activity V.19, it is important to emphasize that the question ``Is \(\vec{b}\) a linear combination of the vectors \(\vec{v}_1,\ldots,\vec{v}_n\)'' is equivalent to the question ``Is there a solution to the vector equation \(x_1\vec{v_1}+\cdots+x_n\vec{v}_n=\vec{b}\)?''. In our view, it is important that this connection be made explicit, and that students can explain this (rather than answering such a question by blindly appealing to features of an augmented matrix). We also begin practicing with matrix spaces and polynomial spaces at this point. After discussing the natural follow-up question of when a set of vectors spans an entire vector space, we then introduce subspaces.
 
-\subsubsection*{Section 0}
-This is a half day, as the first RAT typically only takes a half hour, leaving a half of a class period.  This section is devoted to a single, longer activity exploring what properties Euclidean spaces all have in common
+Starting with Activity V.45, we begin discussing linear independence. Students are generally happy with the informal definition of linear dependence as ``One vector is a linear combination of the others.'' Activity V.47 is designed to help students make the connection between ``One vector is a linear combination of the others'' and ``There is a nontrivial solution to the vector equation \(x_1\vec{v_1}+\cdots+x_n\vec{v}_n=\vec{0}\).''  Again, while we are happy to present Quick Check V.50 to students, our goal is really to have students understand how this connects to the definition, and design our assessments to have students explain this reasoning.
 
-\subsubsection*{Section 1}
-The definition of a vector space is introduced here, as anything satisfying the 8 properties identified in Section 0 as applying to all Euclidean spaces.  The use of $\bf{z}$ for an additive identity element is very intentional here, as students are often misled by symbols resembling $0$.  We quickly highlight this in the first example in Activity V.9, wherein the additive identity is the pair $(0,1)$.  After working with the defintition of a vector space, we introduce the notion of span, and explore the idea geometrically in $\mathbb{R}^2$
+With the concepts of spanning sets and linear independence in hand, it is natural to talk about bases and dimension, first of a vector space in general, and then of a subspace of a vector space. When pressed for time, it can be tempting to skip Activities V.76 and V.77; however, these usually generate lively inter-team discussions as they probe if students really understand the definitions of linear independence and spanning sets. 
 
-\subsubsection*{Section 2}
-Building on students' geometric intuition of span from the previous section, we begin by exploring how to algebraically answer questions about span by solving systems of equations.  Students often have trouble writing down the matrices in V.22 and V.23, often wanting to write the transpose, or somehow concatenating matrices in V.23; instructors are advised to emphasize the parallels with how Euclidean vectors translate into matrices.
+ The module concludes with finding bases of homogeneous systems of equations. Be sure to remind students that this will be used when they compute the basis of a kernel of a linear transformation (Standard A3), and then again when finding eigenvectors (Standard G4).
 
-\subsubsection*{Section 3}
-We continue our exploration of span by addressing the question of when a set of vectors spans the entire vector space.  We hint at the notion of dimension in the first two activities, which is introduced rigorously in Section 6.  In addition to asking these questions about Euclidean vectors, we also include activities again on polynomials and matrices, emphasizing the natural isomorphism to Euclidean space (in as many words).  
 
-\subsubsection*{Section 4}
-This section introduces subspaces, typically a very tricky concept for students.  Several examples are presented as activities with decreasing amounts of scaffolding.
-
-\subsubsection*{Section 5}
-This section introduces the notion of linear independence, motivated by trying to describe a subspace as efficiently as possible.  Students explore how to test for linear independence in V.45.  Activities V.52-54 presage the notion of dimension.  
-
-\subsubsection*{Section 6}
-This section introduces students to the vocabulary to go along with their intuition developed in Section 5, namely the definition of a basis.  Activity V.64 gives some students trouble, as they are tempted to insert the polynomials into a matrix as rows rather than columns.  The instructor is advised to use the reporting phase to draw students' attention to the parallels with the previous activity; in most classes, at least one team will have made this observation and just needs a small prompt to explain to the rest of the class.  
-
-\subsubsection*{Section 7}
-This section ties the previous two together by illuminating to students that the answer to the question of ``How can we efficiently describe a subspace'' is to compute a basis.  Activity V.66 is meant to highlight that (nontrivial) subspaces have (infinitely) many bases.  Instructors are advised to comment when discussing Fact V.68 that a simple argument on the size of a matrix shows that two bases of a finite dimensional vector space have the same size.  We then give students the definition of dimension, and point out how it matches their geometric intuition.  Activities V.73 and V.74 usually elicit a lively inter-team discussion, as students' understanding of linear independence and span is still in a formative stage at this point.  Activity V.78 walks students through computing a basis of the solution space of a homogeneous system of equations; this arises naturally in Module A (in computing the kernel of a linear transformation) and in Module G (in computing an eigenspace).  
 
 \subsection*{Module A: Algebraic properties of linear maps}
-This module introduces the fundamental notion of a linear transformation, and studies them from an algebraic perspective.   Section 1 is entirely devoted to allowing students to grapple with the definition.  In section 2, students discover how a linear map is completely determined by its action on a basis, and we introduce the (nonstandard) definition of a standard matrix.  Parts 3 and 4 are devoted to exploring the notions of injectivity and surjectivity.
-
-RAT answers (IF-AT card B002, 21-30):
-\begin{multicols}{10}
-\begin{enumerate}[1)]
-\setcounter{enumi}{20}
-\item B
-\item A
-\item C
-\item C
-\item B
-\item D
-\item B
-\item C
-\item A
-\item A
-\end{enumerate}
-\end{multicols}
-\subsubsection*{Section 1}
+This module introduces the fundamental notion of a linear transformation, and studies them from an algebraic perspective.   
 Many students at this level have great difficulty understanding how to show statements involving arbitrary objects; for this reason, in A.3 we begin by walking through an explicit example of showing a map is a linear transformation.  Instructors whose students have completed an introduction to proofs course could likely omit this.  
 
-\subsubsection*{Section 2}
-Section 2 is devoted to allowing students to discover the standard matrix.  Activity A.16 usually generates a good discussion.  
+Activities A.13 through A.16 motivate the idea of the `standard matrix' of a linear transformation. A fundamental idea in this course is that a matrix is, whether you admit it to yourself or not, a linear transformation. We then move on to introducing the kernel and the image of a linear transformation.  The scaffolding in activities A.25-A.27 is crucial (as we have found out the hard way).  In most classes, at least one team will make observation A.33 on their own in the course of the preceding activities.  
+Activities A.36 and A.37 outline a proof of the rank-nullity theorem for finite dimensional vector spaces (though we don't assume students have any background in proof writing, so we don't use that language). We then discuss injective and surjective linear maps. 
 
-\subsubsection*{Section 3}
-This section introduces students to the notions of injectivity and surjectivity.  The scaffolding in activities A.26-A.28 is crucial (as we have found out the hard way).  Some teams will try to make observation A.33  on their own in the course of these activities.  
+Activity A.52 is in the spirit of the so-called 'Invertible Matrix Theorem', and is one of our favorites. Be sure to allot at least 15 minutes for the teams to sort the statements, and likely 5-10 minutes for reporting and discussion in classes with more than 4 teams.  We often facilitate reporting on this activity by (after students have sorted the statements into two lists on their whiteboards) asking which statements were easiest to sort; the answer is typically A and F.  Teams will almost always have paired B-E and C-D together, which is our next point of discussion; finally, we move to the most difficult, G and H. 
 
-\subsubsection*{Section 4}
-This section is devoted to a deeper study of injectivity and surjectivity.  Activity A.48 is the crucial activity here; instructors must be sure to allot at least 15 minutes for the teams to sort the statements, and likely 5-10 minutes for reporting and discussion.  We often facilitate reporting on this activity by (after students have sorted the statements into two lists on their whiteboards) asking which statements were easiest to sort; the answer is typically A and F.  Teams will almost always have paired B-E and C-D together, which is our next point of discussion; finally, we move to the most difficult, G and H.  Many classes will deduce Fact A.52 on their own during the discussion of Activities A.50 and A.51.  Activity A.53 serves as a good barometer of where teams are at.  Teams keeping up with everything will, when presented with only part 1, deduce all 3 sections in about a minute; teams that are lagging in their understanding will need closer to 5 minutes for all three parts.  When discussing Activity A.54, instructors are advised to point out how we will use property (c) in the next module to construct inverse maps.  Some classes, due to extended discussion on Activity A.48, do not have time for Activities A.56-A.59; we advise instructors that it is more important to spend the time on A.48.
+The module concludes with a discussion of bijective maps. Many classes will deduce Fact A.56 on their own during the discussion of Activities A.54 and A.55.  Activity A.57 serves as a good barometer of where teams are at.  Teams keeping up with everything will, when presented with only part 1, deduce all 3 sections in about a minute; teams that are lagging in their understanding will need closer to 5 minutes for all three parts.  When discussing Activity A.57, instructors are advised to point out how we will use property (c) in the next module to construct inverse maps.  Some classes, due to extended discussion on Activity A.52, do not have time for Activities A.60-A.63; we advise instructors that it is more important to spend the time on A.52.
+
 
 \subsection*{Module 5-M: Algebraic structure of matrices}
 This module introduces students to matrix multiplication and invertible matrices, motivated through the lens of linear transformations.  Many students at this level have seen matrix multiplication in an algorithmic sense (i.e. compute the dot product of rows with columns); while in the past we mentioned this technique, we now avoid this in favor of emphasizing that the raison d'\^{e}tre of matrix multiplication is the composition of linear transformations.  This change in approach led to a doubling in student success on their first assessment of matrix multiplication.
 
-
-RAT answers (IF-AT card B002, 31-40):
-\begin{multicols}{10}
-\begin{enumerate}[1)]
-\setcounter{enumi}{30}
-\item A
-\item C
-\item C
-\item A
-\item D
-\item C
-\item B
-\item C
-\item B
-\item D
-\end{enumerate}
-\end{multicols}
-
-
-\subsubsection*{Section 1}
-This section develops matrix multiplication as the standard matrix corresponding to the composition of two linear transformations.  The readiness assurance process is crucial here to make sure students can proceed through Activities M.1-M.4.  Activity M.4 is carefully  scaffolded to encourage students to view matrix multiplication as taking appropriate linear combinations of columns. 
-
-\subsubsection*{Section 2}
-Activity M.9 ideally belongs with section 1, but there is rarely time for it.  The bulk of this part is devoted to students' discovering that row operations can be viewed as matrix multiplication.  This will be crucial in Module G in developing geometric intuition for the determinant.  
-
-\subsubsection*{Section 3}
-This section is devoted to the notion of invertibility.  Activity M.16 is a callback to Activity A.48 and A.54.  After students compile their lists, we recommend asking them to circle the 3 that were easiest to categorize to help facilitate the inter-team discussion.   After the definition of invertibility, Activity M.18 shows students that they already know how to compute the standard matrix of the inverse map.  Some students will view Activity M.23 as a ``cruel trick'' after doing a needless calculation for part 1; we find the ``Aha!'' moment as students discover they did needless work invaluable in cementing the notion of an inverse map as ``undoing'' the original map.
+The readiness assurance process is crucial here to make sure students can proceed through Activities M.1-M.4.  Activity M.4 is carefully  scaffolded to encourage students to view matrix multiplication as taking appropriate linear combinations of columns. 
+In an ideal world, Activity M.9 should be completed on the first day of the module, but there is rarely time for it in 50 minute meetings.  The bulk of the subsequent activities are devoted to students' discovering that row operations can be viewed as matrix multiplication.  This will be crucial in Module G in developing geometric intuition for the determinant.  We then move on to invertibility.  Activity M.16 is a callback to Activity A.52 and A.57.  After students compile their lists, we recommend asking them to circle the 3 that were easiest to categorize to help facilitate the inter-team discussion.   After the definition of invertibility, Activity M.189 shows students that they already know how to compute the standard matrix of the inverse map.  Some students will view Activity M.24 as a ``cruel trick'' after doing a needless calculation for part 1; we find the ``Aha!'' moment as students discover they did needless work invaluable in cementing the notion of an inverse map as ``undoing'' the original map.
 
 \subsection*{Module G: Geometric properties of linear maps}
 
-This module explores the geometric properties of linear transformations, focusing on determinants, eigenvalues, and eigenvectors.  The readiness assurance outcomes include some basic high school geometry and algebra, as well as some outcomes of earlier modules concerning the algebraic properties of linear transformations.  The first two days are devoted to determinants, while the third explores eigenvalues and eigenvectors.  Instructors with available time are highly encouraged to follow this up with the Google Page Rank application activities.
+This module explores the geometric properties of linear transformations, focusing on determinants, eigenvalues, and eigenvectors.  
+The goal of the first sequence of activities is to get students to understand that a determinant is measuring how area/volume changes under a linear transformation.  Activities G.1 through G.9 require the students to make a specific construction of a graph and the resulting area transformation.  Students sometimes have a little trouble with the first of these, but then make short work of the remainder, requiring little class wide discussion.  Activity G.8 invites the first incorrect responses after simultaneous reporting; the instructor is advised to emphasize the multiplicative nature of the stretching factor here.  Activity G.9 can be made a little more concrete by distributing parallelograms and triangles cut out of card stock that invite the students to see the equality geometrically.  Activity G.15 sometimes invites teams to settle on the incorrect answer choice of 7; once again, the instructor is advised to emphasize that the stretching factors (determinants) are multiplicative.
 
-RAT answers (IF-AT card B002, 41-50):
-\begin{multicols}{10}
-\begin{enumerate}[1)]
-\setcounter{enumi}{40}
-\item D
-\item B
-\item B
-\item D
-\item A
-\item C
-\item D
-\item A
-\item B
-\item A
-\end{enumerate}
-\end{multicols}
+With a definition in hand, we then focus on how row operations affect determinants. Activities G.27 through G.334 help students discover how to compute determinants by using row operations and reducing the dimension. While we briefly mention Laplace expansion, this is typically only used by students who have learned it previously.
 
-\subsubsection*{Section 1}
-The goal of this day is to get students to understand that a determinant is measuring how area/volume changes under a linear transformation.  Activities G.1 through G.9 require the students to make a specific construction of a graph and the resulting area transformation.  Students sometimes have a little trouble with the first of these, but then make short work of the remainder, requiring little class wide discussion.  Activity G.8 invites the first incorrect responses after simultaneous reporting; the instructor is advised to emphasize the multiplicative nature of the stretching factor here.  Activity G.9 can be made a little more concrete by distributing parallelograms and triangles cut out of card stock that invite the students to see the equality geometrically.  Activity G.15 sometimes invites teams to settle on the incorrect answer choice of 7; once again, the instructor is advised to emphasize that the stretching factors (determinants) are multiplicative.
 
-\subsubsection*{Section 2}
 The goal of this day is to help students understand how to actually compute a determinant.   Activity G.27 begins an inquiry towards Laplace expansion.  Activities G.27 through G.33 are carefully scaffolded to guide students toward understanding how linearity of the determinant leads to Laplace expansion.  In practice, students will find a mixture of row operations and Laplace expansion the most efficient way to actually perform the computations.
 
-\subsubsection*{Section 3}
-The focus now shifts towards eigenvalues and eigenvectors.  Activity G.46 can be a little tedious for students still learning determinants.  
-
+The module and course then concludes with eigenvalues and eigenvectors. When time permits, instructors are encouraged to present some applications, particularly of eigenvalues and eigenvectors, such as Google's Page Rank algorithm.
 
 \end{document}
