Change variable names to reduce extraneous cognitive load in initial Module E activities

--- a/tex/modules/1-E/activities.tex
+++ b/tex/modules/1-E/activities.tex
@@ -135,23 +135,23 @@ is equivalent to the system of equations
   Find a contradiction in this system to show that its solution set
   is \(\emptyset\).
   \begin{align*}
-  -x_1+2x_2  &=  5 \\
-  2x_1-4x_2  &=  6
+  -x+2y  &=  5 \\
+  2x-4y  &=  6
   \end{align*}
 \end{activity}
 
 \begin{activity}{10}
   Consider the following consistent linear system.
   \begin{align*}
-  -x_1+2x_2  &= -3 \\
-  2x_1-4x_2  &=  6
+  -x+2y  &= -3 \\
+  2x-4y  &=  6
   \end{align*}
 \begin{subactivity}
   Find three different solutions
   for this system.
 \end{subactivity}
 \begin{subactivity}
-  Let \(x_2=a\) where \(a\) is an arbitrary real number, then find an
+  Let \(y=a\) where \(a\) is an arbitrary real number, then find an
   expression for \(x_1\) in terms of \(a\). Use this to write
   the solution set
   \(
@@ -172,8 +172,8 @@ is equivalent to the system of equations
 \begin{activity}{10}
   Consider the following linear system.
   \begin{alignat*}{5}
-    x_1 &\,+\,& 2x_2 &\, \,&     &\,-\,&  x_4 &\,=\,& 3 \\
-        &\, \,&      &\, \,& x_3 &\,+\,& 4x_4 &\,=\,& -2
+    x &\,+\,& 2y &\, \,&     &\,-\,&  w &\,=\,& 3 \\
+        &\, \,&      &\, \,& z &\,+\,& 4w &\,=\,& -2
   \end{alignat*}
   Describe the solution set
   \[
@@ -190,8 +190,8 @@ is equivalent to the system of equations
     }
   \]
   to the linear system
-  by setting \(x_2=a\) and \(x_4=b\), and then solving for \(x_1\) and
-  \(x_3\).
+  by setting \(y=a\) and \(w=b\), and then solving for \(x\) and
+  \(y\).
 \end{activity}
 
 \begin{observation}
