--- a/tex/modules/1-E/activities.tex
+++ b/tex/modules/1-E/activities.tex
@@ -384,16 +384,16 @@ is equivalent to the system of equations
 	\[
 		\begin{alignedat}{4}
    		  x &\,+\,& 2y  &\,+\,& z &\,=\,& 3 \\  
-   		  -x &\,-\,& y  &\,+\,& z &\,=\,& 1 \\  
-   		  2x &\,+\,& 5y  &\,+\,& 3z &\,=\,& 7   
+   		  -2x &\,-\,& 3y  &\,-\,& z &\,=\,& -5 \\  
+   		  2x &\,+\,& 5y  &\,+\,& 4z &\,=\,& 10   
    		\end{alignedat}
 	\]
 
     \item 
 	\[
 		\begin{alignedat}{4}
-   		  2x &\,+\,& 5y  &\,+\,& 3z &\,=\,& 7 \\  
-   		  -x &\,-\,& y  &\,+\,& z &\,=\,& 1 \\  
+   		  2x &\,+\,& 5y  &\,+\,& 4z &\,=\,& 10 \\  
+   		  -2x &\,-\,& 3y  &\,-\,& z &\,=\,& -5 \\  
    		  x &\,+\,& 2y  &\,+\,& z &\,=\,& 3  
    		\end{alignedat}
 	\]
@@ -410,7 +410,7 @@ is equivalent to the system of equations
 		\begin{alignedat}{4}
    		  x &\,+\,& 2y  &\,+\,& z &\,=\,& 3 \\  
    		   & & y  &\,+\,& z &\,=\,& 1 \\  
-   		  2x &\,+\,& 5y  &\,+\,& 3z &\,=\,& 7   
+   		  2x &\,+\,& 5y  &\,+\,& 4z &\,=\,& 10   
    		\end{alignedat}
 	\]
 
@@ -439,9 +439,9 @@ is equivalent to the system of equations
 We can rewrite the previous in terms of  equivalences of augmented matrices
 \[
 	\begin{alignedat}{3}
-		\begin{bmatrix}[ccc|c] 2 & 5 & 1 3 & 7 \\ -1 & -1 & 1 & 1 \\ 1 & 2 & 1 & 3 \end{bmatrix} & \sim &
-		\begin{bmatrix}[ccc|c] \circledNumber{1} & 2 & 1 & 3 \\ -1 & -1 & 1 & 1 \\ 2 & 5 & 1 & 3  \end{bmatrix} & \sim &
-		\begin{bmatrix}[ccc|c] \circledNumber{1} & 2 & 1 & 3 \\ 0 & 1 & 1 & 1 \\ 2 & 5 & 1 & 3  \end{bmatrix} \sim  \\
+		\begin{bmatrix}[ccc|c] 2 & 5 & 4 & 10 \\ -2 & -3 & -1 & -5 \\ 1 & 2 & 1 & 3 \end{bmatrix} & \sim &
+		\begin{bmatrix}[ccc|c] \circledNumber{1} & 2 & 1 & 3 \\ -2 & -3 & -1 & -5 \\ 2 & 5 & 4 & 10  \end{bmatrix} & \sim &
+		\begin{bmatrix}[ccc|c] \circledNumber{1} & 2 & 1 & 3 \\ 0 & 1 & 1 & 1 \\ 2 & 5 & 4 & 10  \end{bmatrix} \sim  \\
 		\begin{bmatrix}[ccc|c] \circledNumber{1} & 2 & 1 & 3 \\ 0 & \circledNumber{1} & 1 & 1 \\ 0 & 1 & 2 & 4  \end{bmatrix} & \sim &
 		\begin{bmatrix}[ccc|c] \circledNumber{1} & 0 & -1 & 1 \\ 0 & \circledNumber{1} & 1 & 1 \\ 0 & 1 & 2 & 4  \end{bmatrix} & \sim &
 		\begin{bmatrix}[ccc|c] \circledNumber{1} & 0 & -1 & 1 \\ 0 & \circledNumber{1} & 1 & 1 \\ 0 & 0 & \circledNumber{1} & 3  \end{bmatrix} 
